--- a/app/views/notes/mobile/_new.html.erb
+++ b/app/views/notes/mobile/_new.html.erb
@@ -1,37 +1,35 @@
 <div class="note">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title"><%= t('.title') %></h4>
+  <div class="card">
+    <div class="card-header">
+      <h4 class="card-title"><%= t('.title') %></h4>
     </div>
-    <div class="panel-body">
+    <div class="card-body">
       <%= form_for([:request, @note], remote: true) do |f| %>
         <%= hidden_field_tag :mobile, @mobile %>
         <div class="form-group">
           <div class="input-group">
-            <span class="input-group-addon"><span class="glyphicon glyphicon-pencil"></span></span>
+            <span class="input-group-text"><i class="fas fa-pencil-alt"></i></span>
             <%= f.text_area(:comment, rows: 4, class: 'form-control', placeholder: t('placeholder.note')) %>
           </div>
         </div>
         <div class="row">
           <% if display?(:email) -%>
-            <div class="col-md-8">
-              <div class="form-group has-feedback has-clear">
+            <div class="col-12">
+              <div class="has-clear">
                 <div class="input-group">
-                  <span class="input-group-addon">@</span>
+                  <span class="input-group-text">@</span>
                   <%= email_field_tag(:author, nil, class: 'form-control', placeholder: t('placeholder.email')) %>
-                  <span class="glyphicon glyphicon-remove-circle form-control-feedback form-control-clear" aria-hidden="true"></span>
+                  <i class="far fa-times-circle form-control-clear"></i>
                 </div>
               </div>
             </div>
           <% end -%>
-          <div class="col-md-<%= display?(:email) ? 4 : 12 %>">
+          <div class="col-<%= display?(:email) ? 4 : 12 %>">
             <div class="form-group">
-              <div class="btn-group btn-group-justified" role="group">
-                <div class="btn-group" role="group">
-                  <%= f.submit(t('buttons.submit'), class: 'btn btn-default btn-primary') %>
-                </div>
+              <div class="btn-group d-flex col-12" role="group">
+                <%= f.submit(t('buttons.submit'), class: 'btn btn-primary col-6') %>
                 <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list, mobile: @mobile],
-                            remote: true, class: 'btn btn-default', role: :button) %>
+                            remote: true, class: 'btn btn-light btn-outline-secondary col-6', role: :button) %>
               </div>
               <% @id_list.each do |idl| -%>
                 <%= f.hidden_field "id_list][", :value => idl, id: nil %>
