--- a/app/views/places/mobile/_results.html.erb
+++ b/app/views/places/mobile/_results.html.erb
@@ -1,6 +1,6 @@
 <% if @places -%>
-  <div class="panel panel-default result">
-    <div class="panel-heading"><%= t('.results') %></div>
+  <div class="card result">
+    <div class="card-header"><%= t('.results') %></div>
     <div class="list-group">
       <% @places.each do |place| -%>
         <% if place.geometry['transform_bbox'] %>
@@ -21,7 +21,7 @@
           <% else %>
             <%= place.properties['_title_'].split(', ')[-1] %>
           <% end %>
-          <span class="badge"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></span>
+          <span class="badge rounded-pill bg-secondary"><i class="fas fa-chevron-right"></i></span>
         <% end %>
       <% end -%>
     </div>
