--- a/app/views/requests/_show_panel_title_buttons.html.erb
+++ b/app/views/requests/_show_panel_title_buttons.html.erb
@@ -1,27 +1,27 @@
-<div class="right-badges pull-right">
-  <span class="badge pull-right clickable" data-target="<%= map_path(mobile: @mobile) %>">
-    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+<div class="right-badges">
+  <span class="badge rounded-pill bg-secondary clickable" data-bs-target="<%= map_path(mobile: @mobile) %>">
+    <i class="fas fa-times"></i>
   </span>
-  <span class="badge pull-right clickable" data-target="<%= request_path(request, mobile: @mobile, id_list: id_list) %>">
-    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+  <span class="badge rounded-pill bg-secondary clickable" data-bs-target="<%= request_path(request, mobile: @mobile, id_list: id_list) %>">
+    <i class="fas fa-sync"></i>
   </span>
   <% if display?(:edit_request) -%>
-    <span class="badge pull-right clickable" data-target="<%= edit_request_path(request, mobile: @mobile, id_list: id_list) %>">
-      <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    <span class="badge rounded-pill bg-secondary clickable" data-bs-target="<%= edit_request_path(request, mobile: @mobile, id_list: id_list) %>">
+      <i class="fas fa-pencil-alt"></i>
     </span>
   <% end -%>
   <% if request.job_status && display?(:edit_status) -%>
-    <div class="btn-group pull-right">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-        <span class="glyphicon glyphicon-flag <%= request.flag_color_class %>" aria-hidden="true"></span>
+    <div class="btn-group dropdown">
+      <button type="button" class="btn btn-light btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="fas fa-flag <%= request.flag_color_class %>"></i>
         <span class="caret"></span>
       </button>
-      <ul class="dropdown-menu" role="menu">
+      <ul class="dropdown-menu">
         <% %w(checked unchecked not-checkable).each do |state| -%>
           <li>
             <%= link_to request_path(request, 'request[id_list]': id_list, mobile: @mobile, 'request[job_status]': state.underscore.upcase),
-              method: :put, remote: true do %>
-              <span class="glyphicon glyphicon-flag job-status <%= state %>" aria-hidden="true"></span>
+              method: :put, remote: true, class: 'dropdown-item' do %>
+              <i class="fas fa-flag job-status <%= state %>"></i>
               <%= t(state.to_sym, scope: 'requests.job_status') %>
             <% end -%>
           </li>
