--- a/app/views/starts/_desktop.html.erb
+++ b/app/views/starts/_desktop.html.erb
@@ -1,93 +1,93 @@
-<div class="page-header" id="headline">
+<div class="" id="headline">
   <h3><%= t('.headline', city_short: Settings::Client.city_short) %></h3>
 </div>
 <div class="row">
-  <div class="col-md-3">
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h5 class="panel-title">
+  <div class="col-3">
+    <div class="card card-info">
+      <div class="card-header">
+        <h5 class="card-title">
           <%= t('.recent_requests') %>
           <%= link_to [:observations, format: :xml], target: '_blank', title: t('.subscribe_requests_feed') do %>
             <%= image_tag('rss.png', class: 'img-margin-bottom') %>
           <% end -%>
         </h5>
       </div>
-      <div class="panel-body requests-img-panel">
-        <% @requests.each.with_index(1) do |req, i| -%>
-          <% if i.odd? -%>
-            <div class="row form-group">
-              <div class="col-md-6">
+      <div class="card-body requests-img-card">
+        <div class="row">
+          <% @requests.each.with_index(1) do |req, i| -%>
+            <% if i.odd? -%>
+              <div class="col-6">
                 <%= link_to [:map, request: req.id], title: t('buttons.perma_link', req_id: req.id),
                   data: { turbolinks: false } do %>
                   <% if (url = req.media_url).present? -%>
-                    <div class="img-box img-rounded" style="background-image: url('<%= url %>')">
-                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service.to_s.gsub(/\//, '/ ') %></span>
+                    <div class="img-box rounded" style="background-image: url('<%= url %>')">
                       <span class="img-overlay-bottom"><%= image_tag req.icon_list %></span>
+                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service.to_s.gsub(/\//, '/ ') %></span>
                     </div>
                   <% end -%>
                 <% end -%>
               </div>
-          <% else -%>
-              <div class="col-md-6">
+            <% else -%>
+              <div class="col-6">
                 <%= link_to [:map, request: req.id], title: t('buttons.perma_link', req_id: req.id),
                   data: { turbolinks: false } do %>
                   <% if (url = req.media_url).present? -%>
-                    <div class="img-box img-rounded" style="background-image: url('<%= url %>')">
-                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service.to_s.gsub(/\//, '/ ') %></span>
+                    <div class="img-box rounded" style="background-image: url('<%= url %>')">
                       <span class="img-overlay-bottom"><%= image_tag req.icon_list %></span>
+                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service.to_s.gsub(/\//, '/ ') %></span>
                     </div>
                   <% end -%>
                 <% end -%>
               </div>
-            </div>
+            <% end -%>
           <% end -%>
-        <% end -%>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-md-9">
+  <div class="col-9">
     <% Dir.glob("#{ Settings::Client.resources_path }/starts/*").sort.each do |file| %>
-      <%= render file: file %>
+      <%= render(file: file).html_safe %>
     <% end -%>
-    <div id="statistic-panel" class="panel panel-info">
-      <div class="panel-heading">
-        <h5 class="panel-title"><%= t('.statistics') %></h5>
+    <div id="statistic-card" class="card card-info">
+      <div class="card-header">
+        <h5 class="card-title"><%= t('.statistics') %></h5>
       </div>
-      <div class="panel-body">
-        <div class="col-md-3">
+      <div class="card-body row">
+        <div class="col-3">
           <div class="statistic-box">
             <div class="statistic-box-figure">
-              <span class="label label-warning"><%= @overall_count %></span>
+              <span class="badge bg-warning"><%= @overall_count %></span>
             </div>
             <div class="statistic-box-text">
               <%= t('.overall', start_date: Settings::Client.start_date) %>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-3">
           <div class="statistic-box">
             <div class="statistic-box-figure">
-              <span class="label label-warning"><%= @current_count %></span>
+              <span class="badge bg-warning"><%= @current_count %></span>
             </div>
             <div class="statistic-box-text">
               <%= t('.current') %>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-3">
           <div class="statistic-box">
             <div class="statistic-box-figure">
-              <span class="label label-warning"><%= @newest_count %></span>
+              <span class="badge bg-warning"><%= @newest_count %></span>
             </div>
             <div class="statistic-box-text">
               <%= t('.newest') %>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-3">
           <div class="statistic-box">
             <div class="statistic-box-figure">
-              <span class="label label-warning"><%= @processed_count %></span>
+              <span class="badge bg-warning"><%= @processed_count %></span>
             </div>
             <div class="statistic-box-text">
               <%= t('.processed') %>
@@ -97,12 +97,12 @@
       </div>
     </div>
     <% if File.exist?(neuigkeiten = "#{ Settings::Client.resources_path }/neuigkeiten.html") -%>
-      <div id="news-panel" class="panel panel-info">
-        <div class="panel-heading">
-          <h5 class="panel-title"><%= t('.news') %></h5>
+      <div id="news-card" class="card card-info">
+        <div class="card-header">
+          <h5 class="card-title"><%= t('.news') %></h5>
         </div>
         <ul class="list-group">
-          <%= render file: neuigkeiten %>
+          <%= render(file: neuigkeiten).html_safe %>
         </ul>
       </div>
     <% end -%>
